@@ -10,6 +10,8 @@ Release 0.19.4 - Unreleased
    HBASE-1143  region count erratic in master UI (kill server hosting root
                or meta and see how count goes awry).... make sure you have
                a bunch of reions in there
+   HBASE-1487  ProcessRegionOpen in line 82, LOG.info() outputs
+               "Bytes.toString(this.startCode)", which gives those non-printables
 
 Release 0.19.3 - May 27th, 2009
   BUG FIXES
